# postgresql-testing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/postgresql_testing/: __init__.py
src/postgresql_testing/explain/: cli.py  index.template.html  pev2.css  pev2.umd.js
tests/: test_postgresql_testing.py
