[project]
name = "postgresql-testing"
version = "0.0.7"
description = "PostgreSQL testing helpers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Oli Russell", email = "mrxoliver@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "postgresql-binaries",
    "psycopg[binary]==3.*",
]

[project.urls]
repository = "https://github.com/leontrolski/postgresql-testing"

[project.scripts]
postgresql-testing-serve = "postgresql_testing:cli_serve"
postgresql-testing-explain = "postgresql_testing.explain.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.setuptools.package-data]
"postgresql_testing" = [
    "py.typed",
    "explain/*",
]

[dependency-groups]
test = [
    "postgresql-binaries==15.*",
    "pytest",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 120
